--- a/src/main/resources/fxml/CarTableView.fxml
+++ b/src/main/resources/fxml/CarTableView.fxml
@@ -7,72 +7,55 @@
 <?import java.lang.String?>
 <?import java.util.HashMap?>
 <?import javafx.scene.layout.ColumnConstraints?>
-
-<BorderPane xmlns="http://javafx.com/javafx"
-	xmlns:fx="http://javafx.com/fxml"
+<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
 	fx:controller="de.htwsaar.prog3.carrental.controller.CarTableViewController">
 	<top>
 		<GridPane BorderPane.alignment="CENTER">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
-				<MenuBar prefHeight="10.0" GridPane.columnIndex="0"
-					GridPane.columnSpan="5" GridPane.rowIndex="0">
+				<MenuBar prefHeight="10.0" GridPane.columnIndex="0" GridPane.columnSpan="5"
+					GridPane.rowIndex="0">
 					<menus>
 						<Menu mnemonicParsing="true" text="%menubar-view-file">
 							<items>
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-cars" onAction="#switchToCarsView" />
-								<MenuItem mnemonicParsing="false"
-										  text="%menubar-operation-customers"
-										  onAction="#switchToCustomersView" />
-								<MenuItem mnemonicParsing="false"
-										  text="%menubar-operation-employees"
-										  onAction="#switchToEmployeesView" />
-								<MenuItem mnemonicParsing="false"
-										  text="%menubar-operation-rentals"
-										  onAction="#switchToRentalsView" />
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-cars"
+									onAction="#switchToCarsView" />
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-customers"
+									onAction="#switchToCustomersView" />
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-employees"
+									onAction="#switchToEmployeesView" />
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-rentals"
+									onAction="#switchToRentalsView" />
 								<SeparatorMenuItem mnemonicParsing="false" />
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-close" onAction="#closeApplication" />
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-close"
+									onAction="#closeApplication" />
 							</items>
 						</Menu>
 						<Menu mnemonicParsing="true" text="%menubar-view-edit">
 							<items>
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-edit"
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-edit"
 									onAction="#handleEditButtonClicked" />
-								<MenuItem mnemonicParsing="false"
-                                    text="%menubar-operation-new"
-                                    onAction="#handleNewButtonClicked" />
-								<MenuItem mnemonicParsing="false"
-										  text="%menubar-operation-delete"
-										  onAction="#handleDeleteButtonClicked" />
-                                <MenuItem mnemonicParsing="false"
-                                    text="%menubar-operation-rent"
-                                    onAction="#handleRentButtonClicked" />
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-new"
+									onAction="#handleNewButtonClicked" />
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-delete"
+									onAction="#handleDeleteButtonClicked" />
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-rent"
+									onAction="#handleRentButtonClicked" />
 							</items>
 						</Menu>
 						<Menu mnemonicParsing="true" text="%menubar-view-help">
 							<items>
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-about"
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-about"
 									onAction="#handleAboutButtonClicked" />
 							</items>
 						</Menu>
@@ -82,185 +65,123 @@
 					</padding>
 				</MenuBar>
 				<fx:define>
-					<HashMap fx:id="searchComboBoxFieldStrings"
-						id="%search-combobox-id" brand="%search-combobox-brand"
-						horsepower="%search-combobox-horsepower"
-						dailyRate="%search-combobox-dailyRate"
-						doorCount="%search-combobox-doorCount"
-						drivenDistance="%search-combobox-drivenDistance"
-						category="%search-combobox-category"
-						color="%search-combobox-color"
-						constructionYear="%search-combobox-constructionYear"
-						defects="%search-combobox-defects" fuel="%search-combobox-fuel"
-						gearbox="%search-combobox-gearbox"
-						licenseNumber="%search-combobox-licenseNumber"
-						model="%search-combobox-model"
-						nextInspection="%search-combobox-nextInspection"
-						parkingLot="%search-combobox-parkingLot"
-						tires="%search-combobox-tires" vin="%search-combobox-vin" />
+					<HashMap fx:id="searchComboBoxFieldStrings" id="%car-id-label" brand="%car-brand-label"
+						horsepower="%car-horsePower-label" dailyRate="%car-dailyRate-label"
+						doorCount="%car-doorCount-label" drivenDistance="%car-drivenDistance-label"
+						category="%car-category-label" color="%car-color-label"
+						constructionYear="%car-constructionYear-label" defects="%car-defects-label"
+						fuel="%car-fuel-label" gearbox="%car-gearBox-label" licenseNumber="%car-licenceNumber-label"
+						model="%car-model-label" nextInspection="%car-nextInspection-label"
+						parkingLot="%car-parkingLot-label" tires="%car-tires-label" vin="%car-vin-label" />
 				</fx:define>
-				<ComboBox fx:id="searchComboBoxField" GridPane.rowIndex="1"
-					GridPane.columnIndex="0" promptText="%prompt-search-ComboBoxField"
-					prefWidth="Infinity" GridPane.halignment="CENTER"
+				<ComboBox fx:id="searchComboBoxField" GridPane.rowIndex="1" GridPane.columnIndex="0"
+					promptText="%prompt-search-ComboBoxField" prefWidth="Infinity" GridPane.halignment="CENTER"
 					GridPane.valignment="CENTER">
 					<items>
 						<FXCollections fx:factory="observableArrayList">
 							<fx:reference source="searchComboBoxFieldStrings.id" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.brand" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.horsepower" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.dailyRate" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.doorCount" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.drivenDistance" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.category" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.color" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.constructionYear" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.defects" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.fuel" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.gearbox" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.licenseNumber" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.model" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.nextInspection" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.parkingLot" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.tires" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.vin" />
+							<fx:reference source="searchComboBoxFieldStrings.brand" />
+							<fx:reference source="searchComboBoxFieldStrings.horsepower" />
+							<fx:reference source="searchComboBoxFieldStrings.dailyRate" />
+							<fx:reference source="searchComboBoxFieldStrings.doorCount" />
+							<fx:reference source="searchComboBoxFieldStrings.drivenDistance" />
+							<fx:reference source="searchComboBoxFieldStrings.category" />
+							<fx:reference source="searchComboBoxFieldStrings.color" />
+							<fx:reference source="searchComboBoxFieldStrings.constructionYear" />
+							<fx:reference source="searchComboBoxFieldStrings.defects" />
+							<fx:reference source="searchComboBoxFieldStrings.fuel" />
+							<fx:reference source="searchComboBoxFieldStrings.gearbox" />
+							<fx:reference source="searchComboBoxFieldStrings.licenseNumber" />
+							<fx:reference source="searchComboBoxFieldStrings.model" />
+							<fx:reference source="searchComboBoxFieldStrings.nextInspection" />
+							<fx:reference source="searchComboBoxFieldStrings.parkingLot" />
+							<fx:reference source="searchComboBoxFieldStrings.tires" />
+							<fx:reference source="searchComboBoxFieldStrings.vin" />
 						</FXCollections>
 					</items>
 				</ComboBox>
 				<fx:define>
-					<HashMap fx:id="searchComboBoxComparatorStrings"
-						equals="%search-combobox-equals"
-						greater="%search-combobox-greater"
-						smaller="%search-combobox-smaller" like="%search-combobox-like" />
+					<HashMap fx:id="searchComboBoxComparatorStrings" equals="%search-combobox-equals"
+						greater="%search-combobox-greater" smaller="%search-combobox-smaller"
+						like="%search-combobox-like" />
 				</fx:define>
-				<ComboBox fx:id="searchComboBoxComparator"
-					GridPane.rowIndex="1" GridPane.columnIndex="1"
-					promptText="%prompt-search-ComboBoxComparator" prefWidth="Infinity"
+				<ComboBox fx:id="searchComboBoxComparator" GridPane.rowIndex="1"
+					GridPane.columnIndex="1" promptText="%prompt-search-ComboBoxComparator" prefWidth="Infinity"
 					GridPane.halignment="CENTER" GridPane.valignment="CENTER">
 					<items>
 						<FXCollections fx:factory="observableArrayList">
-							<fx:reference
-								source="searchComboBoxComparatorStrings.equals" />
-							<fx:reference
-								source="searchComboBoxComparatorStrings.greater" />
-							<fx:reference
-								source="searchComboBoxComparatorStrings.smaller" />
-							<fx:reference
-								source="searchComboBoxComparatorStrings.like" />
+							<fx:reference source="searchComboBoxComparatorStrings.equals" />
+							<fx:reference source="searchComboBoxComparatorStrings.greater" />
+							<fx:reference source="searchComboBoxComparatorStrings.smaller" />
+							<fx:reference source="searchComboBoxComparatorStrings.like" />
 						</FXCollections>
 					</items>
 				</ComboBox>
-				<TextField fx:id="searchTextField" GridPane.rowIndex="1"
-					GridPane.columnIndex="2" promptText="%prompt-search-TextField"
+				<TextField fx:id="searchTextField" GridPane.rowIndex="1" GridPane.columnIndex="2"
+					promptText="%prompt-search-TextField" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+				<Button fx:id="buttonApplyCurrentFilter" mnemonicParsing="false"
+					onAction="#handleApplyCurrentFilterButtonClicked" text="%button-applyCurrentFilter-label"
+					textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="3" prefWidth="Infinity"
 					GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-				<Button fx:id="buttonApplyCurrentFilter"
-					mnemonicParsing="false"
-					onAction="#handleApplyCurrentFilterButtonClicked"
-					text="%button-applyCurrentFilter-label" textAlignment="CENTER"
-					GridPane.rowIndex="1" GridPane.columnIndex="3" prefWidth="Infinity"
-					GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-				<Button fx:id="buttonRemoveCurrentFilter"
-					mnemonicParsing="false"
-					onAction="#handleRemoveCurrentFilterButtonClicked"
-					text="%button-removeCurrentFilter-label" textAlignment="CENTER"
-					GridPane.rowIndex="1" GridPane.columnIndex="4" prefWidth="Infinity"
+				<Button fx:id="buttonRemoveCurrentFilter" mnemonicParsing="false"
+					onAction="#handleRemoveCurrentFilterButtonClicked" text="%button-removeCurrentFilter-label"
+					textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="4" prefWidth="Infinity"
 					GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
 			</children>
 		</GridPane>
 	</top>
 	<center>
-		<TableView fx:id="carTableView" prefHeight="400.0"
-			prefWidth="487.0" BorderPane.alignment="CENTER">
+		<TableView fx:id="carTableView" prefHeight="400.0" prefWidth="487.0"
+			BorderPane.alignment="CENTER">
 			<columns>
-				<TableColumn fx:id="id" text="%table-view-header-id" />
-				<TableColumn fx:id="brand"
-					text="%table-view-header-brand" />
-				<TableColumn fx:id="horsepower"
-					text="%table-view-header-horsepower" />
-				<TableColumn fx:id="dailyRate"
-					text="%table-view-header-dailyRate" />
-				<TableColumn fx:id="doorCount"
-					text="%table-view-header-doorCount" />
-				<TableColumn fx:id="drivenDistance"
-					text="%table-view-header-drivenDistance" />
-				<TableColumn fx:id="category"
-					text="%table-view-header-category" />
-				<TableColumn fx:id="color"
-					text="%table-view-header-color" />
-				<TableColumn fx:id="constructionYear"
-					text="%table-view-header-constructionYear" />
-				<TableColumn fx:id="defects"
-					text="%table-view-header-defects" />
-				<TableColumn fx:id="fuel" text="%table-view-header-fuel" />
-				<TableColumn fx:id="gearbox"
-					text="%table-view-header-gearbox" />
-				<TableColumn fx:id="licenseNumber"
-					text="%table-view-header-licenseNumber" />
-				<TableColumn fx:id="model"
-					text="%table-view-header-model" />
-				<TableColumn fx:id="nextInspection"
-					text="%table-view-header-nextInspection" />
-				<TableColumn fx:id="parkingLot"
-					text="%table-view-header-parkingLot" />
-				<TableColumn fx:id="tires"
-					text="%table-view-header-tires" />
-				<TableColumn fx:id="vin" text="%table-view-header-vin" />
+				<TableColumn fx:id="id" text="%car-id-label" />
+				<TableColumn fx:id="brand" text="%car-brand-label" />
+				<TableColumn fx:id="horsepower" text="%car-horsePower-label" />
+				<TableColumn fx:id="dailyRate" text="%car-dailyRate-label" />
+				<TableColumn fx:id="doorCount" text="%car-doorCount-label" />
+				<TableColumn fx:id="drivenDistance" text="%car-drivenDistance-label" />
+				<TableColumn fx:id="category" text="%car-category-label" />
+				<TableColumn fx:id="color" text="%car-color-label" />
+				<TableColumn fx:id="constructionYear" text="%car-constructionYear-label" />
+				<TableColumn fx:id="defects" text="%car-defects-label" />
+				<TableColumn fx:id="fuel" text="%car-fuel-label" />
+				<TableColumn fx:id="gearbox" text="%car-gearBox-label" />
+				<TableColumn fx:id="licenseNumber" text="%car-licenceNumber-label" />
+				<TableColumn fx:id="model" text="%car-model-label" />
+				<TableColumn fx:id="nextInspection" text="%car-nextInspection-label" />
+				<TableColumn fx:id="parkingLot" text="%car-parkingLot-label" />
+				<TableColumn fx:id="tires" text="%car-tires-label" />
+				<TableColumn fx:id="vin" text="%car-vin-label" />
 			</columns>
 		</TableView>
 	</center>
 	<bottom>
-		<GridPane BorderPane.alignment="CENTER" prefHeight="25.0"
-			prefWidth="1442.0">
+		<GridPane BorderPane.alignment="CENTER" prefHeight="25.0" prefWidth="1442.0">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10"
-					prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10"
-					prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10"
-					prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10"
-					prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0" />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
 				<Button fx:id="buttonEditSelectedObject" mnemonicParsing="false"
-					onAction="#handleEditButtonClicked" text="%button-edit-label"
-					textAlignment="CENTER" GridPane.columnIndex="0"
-					GridPane.rowIndex="0" GridPane.halignment="CENTER"
+					onAction="#handleEditButtonClicked" text="%button-edit-label" textAlignment="CENTER"
+					GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER"
 					GridPane.valignment="CENTER" />
 				<Button fx:id="buttonCreateNewCar" mnemonicParsing="false"
-					onAction="#handleNewButtonClicked" text="%button-new-label"
-					textAlignment="CENTER" GridPane.columnIndex="1"
-					GridPane.rowIndex="0" GridPane.halignment="CENTER"
+					onAction="#handleNewButtonClicked" text="%button-new-label" textAlignment="CENTER"
+					GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"
 					GridPane.valignment="CENTER" />
-				<Button fx:id="buttonDeleteSelectedObject"
-					mnemonicParsing="false" onAction="#handleDeleteButtonClicked"
-					text="%button-delete-label" textAlignment="CENTER"
-					GridPane.columnIndex="2" GridPane.rowIndex="0"
-					GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+				<Button fx:id="buttonDeleteSelectedObject" mnemonicParsing="false"
+					onAction="#handleDeleteButtonClicked" text="%button-delete-label" textAlignment="CENTER"
+					GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.halignment="CENTER"
+					GridPane.valignment="CENTER" />
 				<Button fx:id="buttonRentSelectedCar" mnemonicParsing="false"
-					onAction="#handleRentButtonClicked" text="%button-rent-label"
-					textAlignment="CENTER" GridPane.columnIndex="3"
-					GridPane.rowIndex="0" GridPane.halignment="CENTER"
+					onAction="#handleRentButtonClicked" text="%button-rent-label" textAlignment="CENTER"
+					GridPane.columnIndex="3" GridPane.rowIndex="0" GridPane.halignment="CENTER"
 					GridPane.valignment="CENTER" />
 			</children>
 		</GridPane>
