--- a/src/main/resources/fxml/EditCustomerView.fxml
+++ b/src/main/resources/fxml/EditCustomerView.fxml
@@ -3,8 +3,8 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="de.htwsaar.prog3.carrental.controller.EditCustomerViewController">
+<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
+	fx:controller="de.htwsaar.prog3.carrental.controller.EditCustomerViewController">
 	<top>
 		<MenuBar prefHeight="14.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
 			<menus>
@@ -21,39 +21,42 @@
 	</top>
 	<center>
 		<GridPane alignment="center" hgap="10" vgap="10">
-			<Label text="%first-name-label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+			<Label text="%customer-firstName-label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 			<TextField fx:id="firstNameTextField" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-			<Label text="%last-name-label" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+			<Label text="%customer-lastName-label" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 			<TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-			
-			<Label text="%email-label" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+			<Label text="%customer-email-label" GridPane.columnIndex="0" GridPane.rowIndex="2" />
 			<TextField fx:id="emailAddressTextField" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-			<Label text="%phonenumber-label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+			<Label text="%customer-phoneNumber-label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 			<TextField fx:id="phoneNumberTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-			<Label text="%dateofbrith-label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+			<Label text="%customer-dateOfBirth-label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
 			<TextField fx:id="dateOfBirthTextField" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-			
-			<Label text="%street-label" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+			<Label text="%customer-street-label" GridPane.columnIndex="0" GridPane.rowIndex="4" />
 			<TextField fx:id="streetTextField" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-			<Label text="%housenumber-label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+			<Label text="%customer-houseNumber-label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 			<TextField fx:id="houseNumberTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-			<Label text="%city-label" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+			<Label text="%customer-city-label" GridPane.columnIndex="2" GridPane.rowIndex="4" />
 			<TextField fx:id="cityTextField" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-			<Label text="%zipcode-label" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+			<Label text="%customer-zipCode-label" GridPane.columnIndex="3" GridPane.rowIndex="4" />
 			<TextField fx:id="zipCodeTextField" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-			
-			<Label text="%idnumber-label" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+			<Label text="%customer-idNumber-label" GridPane.columnIndex="0" GridPane.rowIndex="6" />
 			<TextField fx:id="idNumberTextField" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-			<Label text="%driverlicenseid-label" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-			<TextField fx:id="driverLicenseIdTextField" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+			<Label text="%customer-driverLicenseId-label" GridPane.columnIndex="1"
+				GridPane.rowIndex="6" />
+			<TextField fx:id="driverLicenseIdTextField" GridPane.columnIndex="1"
+				GridPane.rowIndex="7" />
 		</GridPane>
 	</center>
 	<bottom>
 		<BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
 			<right>
 				<GridPane alignment="center" hgap="10" vgap="10">
-					<Button fx:id="cancelButton" mnemonicParsing="false" onAction="#handleCancelButtonClicked" text="%cancel-button" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-					<Button fx:id="applyButton" mnemonicParsing="false" onAction="#handleApplyButtonClicked" text="%apply-button" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+					<Button fx:id="cancelButton" mnemonicParsing="false"
+						onAction="#handleCancelButtonClicked" text="%button-cancel-label" textAlignment="CENTER"
+						GridPane.columnIndex="0" GridPane.rowIndex="0" />
+					<Button fx:id="applyButton" mnemonicParsing="false" onAction="#handleApplyButtonClicked"
+						text="%button-apply-label" textAlignment="CENTER" GridPane.columnIndex="1"
+						GridPane.rowIndex="0" />
 				</GridPane>
 			</right>
 			<padding>
