--- a/src/main/resources/fxml/EmployeeTableView.fxml
+++ b/src/main/resources/fxml/EmployeeTableView.fxml
@@ -7,68 +7,52 @@
 <?import java.lang.String?>
 <?import java.util.HashMap?>
 <?import javafx.scene.layout.ColumnConstraints?>
-
-<BorderPane xmlns="http://javafx.com/javafx"
-	xmlns:fx="http://javafx.com/fxml"
+<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
 	fx:controller="de.htwsaar.prog3.carrental.controller.EmployeeTableViewController">
 	<top>
 		<GridPane BorderPane.alignment="CENTER">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
-				<MenuBar prefHeight="10.0" GridPane.columnIndex="0"
-					GridPane.columnSpan="5" GridPane.rowIndex="0">
+				<MenuBar prefHeight="10.0" GridPane.columnIndex="0" GridPane.columnSpan="5"
+					GridPane.rowIndex="0">
 					<menus>
 						<Menu mnemonicParsing="true" text="%menubar-view-file">
 							<items>
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-employees"
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-employees"
 									onAction="#switchToEmployeesView" />
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-rentals"
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-rentals"
 									onAction="#switchToRentalsView" />
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-customers"
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-customers"
 									onAction="#switchToCustomersView" />
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-cars" onAction="#switchToCarsView" />
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-close" onAction="#closeApplication" />
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-cars"
+									onAction="#switchToCarsView" />
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-close"
+									onAction="#closeApplication" />
 							</items>
 						</Menu>
 						<Menu mnemonicParsing="true" text="%menubar-view-edit">
 							<items>
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-delete"
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-delete"
 									onAction="#handleDeleteButtonClicked" />
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-edit"
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-edit"
 									onAction="#handleEditButtonClicked" />
-								<MenuItem mnemonicParsing="false"
-                                    text="%menubar-operation-new"
-                                    onAction="#handleNewButtonClicked" />
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-new"
+									onAction="#handleNewButtonClicked" />
 							</items>
 						</Menu>
 						<Menu mnemonicParsing="true" text="%menubar-view-help">
 							<items>
-								<MenuItem mnemonicParsing="false"
-									text="%menubar-operation-about"
+								<MenuItem mnemonicParsing="false" text="%menubar-operation-about"
 									onAction="#handleAboutButtonClicked" />
 							</items>
 						</Menu>
@@ -78,109 +62,83 @@
 					</padding>
 				</MenuBar>
 				<fx:define>
-					<HashMap fx:id="searchComboBoxFieldStrings"
-						id="%search-employee-combobox-id"
-						firstName="%search-employee-combobox-firstName"
-						lastName="%search-employee-combobox-lastName"
-						position="%search-employee-combobox-position" />
+					<HashMap fx:id="searchComboBoxFieldStrings" id="%employee-id-label"
+						firstName="%employee-firstName-label" lastName="%employee-lastName-label"
+						position="%employee-position-label" />
 				</fx:define>
-				<ComboBox fx:id="searchComboBoxField" GridPane.rowIndex="1"
-					GridPane.columnIndex="0" promptText="%prompt-search-ComboBoxField"
-					prefWidth="Infinity" GridPane.halignment="CENTER"
+				<ComboBox fx:id="searchComboBoxField" GridPane.rowIndex="1" GridPane.columnIndex="0"
+					promptText="%prompt-search-ComboBoxField" prefWidth="Infinity" GridPane.halignment="CENTER"
 					GridPane.valignment="CENTER">
 					<items>
 						<FXCollections fx:factory="observableArrayList">
 							<fx:reference source="searchComboBoxFieldStrings.id" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.firstName" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.lastName" />
-							<fx:reference
-								source="searchComboBoxFieldStrings.position" />
+							<fx:reference source="searchComboBoxFieldStrings.firstName" />
+							<fx:reference source="searchComboBoxFieldStrings.lastName" />
+							<fx:reference source="searchComboBoxFieldStrings.position" />
 						</FXCollections>
 					</items>
 				</ComboBox>
 				<fx:define>
-					<HashMap fx:id="searchComboBoxComparatorStrings"
-						equals="%search-combobox-equals"
+					<HashMap fx:id="searchComboBoxComparatorStrings" equals="%search-combobox-equals"
 						like="%search-combobox-like" />
 				</fx:define>
-				<ComboBox fx:id="searchComboBoxComparator"
-					GridPane.rowIndex="1" GridPane.columnIndex="1"
-					promptText="%prompt-search-ComboBoxComparator" prefWidth="Infinity"
+				<ComboBox fx:id="searchComboBoxComparator" GridPane.rowIndex="1"
+					GridPane.columnIndex="1" promptText="%prompt-search-ComboBoxComparator" prefWidth="Infinity"
 					GridPane.halignment="CENTER" GridPane.valignment="CENTER">
 					<items>
 						<FXCollections fx:factory="observableArrayList">
-							<fx:reference
-								source="searchComboBoxComparatorStrings.equals" />
-							<fx:reference
-								source="searchComboBoxComparatorStrings.like" />
+							<fx:reference source="searchComboBoxComparatorStrings.equals" />
+							<fx:reference source="searchComboBoxComparatorStrings.like" />
 						</FXCollections>
 					</items>
 				</ComboBox>
-				<TextField fx:id="searchTextField" GridPane.rowIndex="1"
-					GridPane.columnIndex="2" promptText="%prompt-search-TextField"
+				<TextField fx:id="searchTextField" GridPane.rowIndex="1" GridPane.columnIndex="2"
+					promptText="%prompt-search-TextField" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+				<Button fx:id="buttonApplyCurrentFilter" mnemonicParsing="false"
+					onAction="#handleApplyCurrentFilterButtonClicked" text="%button-applyCurrentFilter-label"
+					textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="3" prefWidth="Infinity"
 					GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-				<Button fx:id="buttonApplyCurrentFilter"
-					mnemonicParsing="false"
-					onAction="#handleApplyCurrentFilterButtonClicked"
-					text="%button-applyCurrentFilter-label" textAlignment="CENTER"
-					GridPane.rowIndex="1" GridPane.columnIndex="3" prefWidth="Infinity"
-					GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-				<Button fx:id="buttonRemoveCurrentFilter"
-					mnemonicParsing="false"
-					onAction="#handleRemoveCurrentFilterButtonClicked"
-					text="%button-removeCurrentFilter-label" textAlignment="CENTER"
-					GridPane.rowIndex="1" GridPane.columnIndex="4" prefWidth="Infinity"
+				<Button fx:id="buttonRemoveCurrentFilter" mnemonicParsing="false"
+					onAction="#handleRemoveCurrentFilterButtonClicked" text="%button-removeCurrentFilter-label"
+					textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="4" prefWidth="Infinity"
 					GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
 			</children>
 		</GridPane>
 	</top>
 	<center>
-		<TableView fx:id="employeeTableView" prefHeight="400.0"
-			prefWidth="487.0" BorderPane.alignment="CENTER">
+		<TableView fx:id="employeeTableView" prefHeight="400.0" prefWidth="487.0"
+			BorderPane.alignment="CENTER">
 			<columns>
-				<TableColumn fx:id="id" text="%table-view-header-id" />
-				<TableColumn fx:id="firstName"
-					text="%table-view-employee-header-firstName" />
-				<TableColumn fx:id="lastName"
-					text="%table-view-employee-header-lastName" />
-				<TableColumn fx:id="position"
-					text="%table-view-employee-header-position" />
+				<TableColumn fx:id="id" text="%employee-id-label" />
+				<TableColumn fx:id="firstName" text="%employee-firstName-label" />
+				<TableColumn fx:id="lastName" text="%employee-lastName-label" />
+				<TableColumn fx:id="position" text="%employee-position-label" />
 			</columns>
 		</TableView>
 	</center>
 	<bottom>
-		<GridPane BorderPane.alignment="CENTER" prefHeight="25.0"
-			prefWidth="1442.0">
+		<GridPane BorderPane.alignment="CENTER" prefHeight="25.0" prefWidth="1442.0">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10"
-					prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10"
-					prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10"
-					prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0" />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
 				<Button fx:id="buttonEditSelectedObject" mnemonicParsing="false"
-					onAction="#handleEditButtonClicked" text="%button-edit-label"
-					textAlignment="CENTER" GridPane.columnIndex="0"
-					GridPane.rowIndex="0" GridPane.halignment="CENTER"
+					onAction="#handleEditButtonClicked" text="%button-edit-label" textAlignment="CENTER"
+					GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER"
 					GridPane.valignment="CENTER" />
 				<Button fx:id="buttonCreateNewEmployee" mnemonicParsing="false"
-					onAction="#handleNewButtonClicked" text="%button-new-label"
-					textAlignment="CENTER" GridPane.columnIndex="1"
-					GridPane.rowIndex="0" GridPane.halignment="CENTER"
+					onAction="#handleNewButtonClicked" text="%button-new-label" textAlignment="CENTER"
+					GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"
 					GridPane.valignment="CENTER" />
-				<Button fx:id="buttonDeleteSelectedObject"
-					mnemonicParsing="false" onAction="#handleDeleteButtonClicked"
-					text="%button-delete-label" textAlignment="CENTER"
-					GridPane.columnIndex="2" GridPane.rowIndex="0"
-					GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+				<Button fx:id="buttonDeleteSelectedObject" mnemonicParsing="false"
+					onAction="#handleDeleteButtonClicked" text="%button-delete-label" textAlignment="CENTER"
+					GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.halignment="CENTER"
+					GridPane.valignment="CENTER" />
 			</children>
 		</GridPane>
 	</bottom>
